--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "s3-recursive-download",
-  "version": "1.0.0",
+  "name": "@reciphora/s3-recursive-download",
+  "version": "1.0.1",
   "description": "Recursively download all objects from an S3 prefix into a local directory preserving folder structure.",
   "main": "s3-download-directory-recursively.js",
   "bin": {
@@ -25,6 +25,9 @@
     "README.md",
     "LICENSE"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">=14"
   },
